sge-suite-check lane: sge core's own test tree compiled against the ladder port, errors attributed to 13.31's families — baselined at 1616 (member-shape 291, opaque 275+73, android 216, nullable 127, filetype 93, net 93, tiled 83, arity 68, context 54, particles 49)